# portfolio_rs

./: .dockerignore  .env  .gitignore  .ignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  compose.yaml
.github/: CODEOWNERS
.run/: docker build up.run.xml
scripts/: prism.js
src/: address.rs  main.rs  router.rs
src/router/: mod.rs  version.rs
src/router/handlers/: README.md  bookshelf.rs  html_template.rs  index.rs  mod.rs  my_work.rs  playground.rs  project.rs  testimonials.rs
styles/: main.css  prism.css
templates/: base.html  bookshelf.html  contact.html  index.html  projects.html
templates/pages/: base.html  bookshelf.html  index.html  my_work.html  my_work_gists.html  playground.html  testimonials.html
templates/pages/bookshelf/: bookshelf.html
templates/pages/home/: index.html
templates/pages/my_work/: my_work.html  projects.html
templates/pages/testimonials/: testimonials.html
