[package]
name = "portfolio_rs"
version = "1.0.3"
edition = "2021"
description = "Portfolio website written in Rust. Uses Axum, Askama, Tower, and htmx."
authors = ["Joshua Pendragon <pendragon.josh@gmail.com>"]
repository = "https://github.com/graffhyrum/portfolio_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
dotenv = "0.15.0"


